--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,10 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+    <ul>
+        <li><a href="https://www.twitch.tv/playnewworld">Twitch TV</a></li>
+        <li><span>•</span></li>
+        <li><a href="https://twitter.com/playnewworld">X (Twitter)</a></li>
+        <li><span>•</span></li>
+        <li><a href="https://www.newworld.com/pt-br/">NW Oficial</a></li>
+       
+    </ul>
+</div>
