--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -1,3 +1,25 @@
-*{
-    color: green;
+
+.container__small-card{
+    
+    width: 700px;
+   margin-bottom: 10px;
+}
+.container__small-card-content{
+ display: flex;
+ flex-direction: row;   
+}
+
+.small-card__picture  >img{
+    
+    width: 200px;
+    min-width: 200px;
+    margin-right: 20px;
+}
+.small-card__title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container__small-card-separator{
+    margin-top: 10px;
 }
