--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,26 @@
-<p>small-card works!</p>
+<div class="container__small-card">
+<div class="container__small-card-content">
+    <div class="small-card__picture">
+        <img src="https://images.ctfassets.net/j95d1p8hsuun/6dPkjTa9NiZ2nD41CiZhBd/c70affc7f9a849983c4e035644642dd7/callofwilds-5802.jpg" 
+        alt="" srcset="" height="120px">
+    </div>
+    
+    <div class="small-card__title">
+        <h1><a href="#">Chamado das Selvas</a></h1>
+        
+    </div>
+
+</div>
+      
+    
+    <!-- <div class="small-card__description">
+        <p><a href="">
+            Festeje o evento de criadores New World – Chamado das Selvas com este drop de 5 escalas disponível até 31 de outubro às 03:29 BRT. Partindo da Escala 1, os espectadores precisam liberar cada drop antes de acumular progresso rumo à escala seguinte.
+        </a></p>
+    </div> -->
+    
+    <div class="container__small-card-separator">
+        <hr/>    
+    </div>
+</div>
+
