--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -1,3 +1,11 @@
-*{
-    color: pink;
+
+.container__menu-bar > ul{
+    display: flex;
+    flex-direction: row;
 }
+.container__menu-bar > ul > li{
+   margin-right: 20px;
+   list-style: none;
+
+}
+
