--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,7 @@
+<header>
+    <app-menu-bar></app-menu-bar>
+</header>
+
 <app-menu-title></app-menu-title>
 <div class="container__articles">
     <div class="articles__main">
@@ -5,8 +9,12 @@
 
     </div>
     <div class="articles__other">
-
+        <app-small-card></app-small-card>
+        <app-small-card></app-small-card>
+        <app-small-card></app-small-card>
         
     </div>
 
 </div>
+
+
