components dinamycs propertys

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,23 +1,18 @@
 <div class="container__big-card">
 
     <div class="big-card__picture">
-        <img src="https://ghost.nwdb.info/content/images/2023/08/image--53-.jpg" 
+        <img src="{{pictureCover}}" 
         alt="" srcset="" width="400px">
     </div>
     
     <div class="big-card__title">
-        <h1><a href="#">Rise of the Angry Earth Announcement</a></h1>
+        <h1><a href="#">{{cardTitle}}</a></h1>
         
     </div>
     
     <div class="big-card__description">
         <p><a href="">
-            Ascensão da Terra Indócil
-            Saudações, aventureiros!
-            A Ascensão da Terra Indócil estará disponível para compra e download a partir das 13h de 3 de outubro. 
-            Cavalgue montarias, empunhe uma nova arma, explore terras transformadas e muito mais.
-             Mal podemos esperar para ver os jogadores vivenciando cada novo recurso - incluindo a história por trás da queda da Primeira Luz - em nossa primeira expansão paga. 
-             Descubra o próximo capítulo de Aeternum por apenas R$ 88,99.
+           {{cardDescription}}
             
         </a></p>
     </div>
