--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,12 +1,12 @@
 <div class="container__small-card">
 <div class="container__small-card-content">
     <div class="small-card__picture">
-        <img src="https://images.ctfassets.net/j95d1p8hsuun/6dPkjTa9NiZ2nD41CiZhBd/c70affc7f9a849983c4e035644642dd7/callofwilds-5802.jpg" 
+        <img src="{{pictureCover}}" 
         alt="" srcset="" height="120px">
     </div>
     
     <div class="small-card__title">
-        <h1><a href="#">Chamado das Selvas</a></h1>
+        <h1><a href="#">{{cardTitle}}</a></h1>
         
     </div>
 
