--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,11 @@
-<header>
-    <app-menu-bar></app-menu-bar>
-</header>
 
 <app-menu-title></app-menu-title>
 <div class="container__articles">
     <div class="articles__main">
         
-        <app-big-card pictureCover="https://ghost.nwdb.info/content/images/2023/08/image--53-.jpg"
+        <app-big-card 
+        Id="1"
+        pictureCover="https://ghost.nwdb.info/content/images/2023/08/image--53-.jpg"
         cardTitle="Ascensão da Terra Indócil"
         cardDescription="Saudações, aventureiros!
         A Ascensão da Terra Indócil estará disponível para compra e download a partir de 3 de outubro. 
@@ -19,18 +18,21 @@
     </div>
     <div class="articles__other">
         <app-small-card
+        Id="2"
         cardTitle="Chamados da Selva"
         pictureCover="https://images.ctfassets.net/j95d1p8hsuun/6dPkjTa9NiZ2nD41CiZhBd/c70affc7f9a849983c4e035644642dd7/callofwilds-5802.jpg"
         >
         </app-small-card>
 
         <app-small-card
+        Id="3"
         cardTitle="Habilidade de Montaria"
         pictureCover="https://images.ctfassets.net/j95d1p8hsuun/1nWdd6MSMNccKk0medYRjU/35be185a793f1bcc99ae49aa73bb011a/NW_Mount_NewOlympus_ROTAE_Announce_1920x1080_Final_CT-002143.jpg"
         
         >
     </app-small-card>
         <app-small-card
+        Id="4"
         cardTitle="Nova Arma: Mangual"
         pictureCover="https://images.ctfassets.net/j95d1p8hsuun/1vzXt8y0iMPI4hWTMLGEqH/437e48a6a97ab0c0ede31cec0270f803/NW_Flail_HeroPose_B_ROTAE_Announce_1920x1080_Final_CT-002143.jpg"
         >
